--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "keywords": ["pixijs", "webgl", "pixi", "HTML5 game"],
+  "keywords": [
+    "pixijs",
+    "webgl",
+    "pixi",
+    "HTML5 game"
+  ],
   "author": "jorchava",
   "license": "CC-BY-4.0",
   "description": "Beat'em up scene using PixiJS @latest ts vite",
@@ -16,6 +21,8 @@
     "pixi.js": "^8.12.0"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
+    "terser": "^5.43.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.2"
   }
