--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
         "skipLibCheck": true,
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true
+        "noEmit": false,
+        "removeComments": true
     },
     "include": ["src"]
 }
